--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "moussab-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "update": "git add . && git commit -m 'update' && git push && npm run deploy"
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "postbuild": "cp dist/index.html dist/404.html",
+    "update": "git add . && git commit -m 'update' && git push && npm run build && npm run deploy"
+
   },
   "dependencies": {
+    "@types/react-helmet-async": "^1.0.1",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -30,7 +36,9 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "rimraf": "^5.0.10",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.43.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
