--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react-helmet-async": "^1.0.1",
+    "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
